Fix for displaying collapse buttons

--- a/web/css/bach.css
+++ b/web/css/bach.css
@@ -1653,7 +1653,6 @@ div.sonata-bc .btn-primary:hover {
 }
 
 #cdccontrol, #doccontrol {
-    float: right;
     margin-right: .5em;
     text-align: right;
 }
